--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
     "typescript": "^5.4.5"
   },
   "devDependencies": {
+    "@types/node": "^20.12.8",
     "@typescript-eslint/eslint-plugin": "^7.8.0",
     "@typescript-eslint/parser": "^7.8.0",
-    "eslint": "^8.57.0"
+    "eslint": "^8.57.0",
+    "ts-node": "^10.9.2"
   },
   "name": "storm-lua-minify",
   "description": "",
