--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
   "version": "0.1.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "run": "node ./dist/index.js",
+    "build": "npx tsc"
   },
   "author": "",
   "license": "MIT"
