--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   "version": "0.1.0",
   "main": "index.js",
   "scripts": {
-    "run": "node ./dist/index.js",
+    "start": "node ./dist/index.js",
     "build": "npx tsc"
   },
   "author": "",
